--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -335,7 +335,7 @@ reaches its minimum permitted value.''
 WP
 \url{https://en.wikipedia.org/wiki/Schwarzschild_geodesics#Orbits_of_test_particles}
 has closed-form expressions for $t(\tau)$ and $r(\tau)$ for a radially infalling
-massive test particle. Taking the limit near the singularity gives
+massive test particle that starts at rest at infinity. Taking the limit near the singularity gives
 $t\approx(3/2)\tau$ and $r\approx -[(3/2)\tau]^{2/3}$ (where I've assumed it hits
 the singularity at $t=0$, $\tau=0$).
 
@@ -359,9 +359,11 @@ by a power law?
 
 The error in 4th-order Runge-Kutta with step size $h$ goes like $h^4r^{-6}$.
 To keep this constant, we would need $h\propto r^{3/2}$. But for a massive
-test particle infalling radially, this is simply $h\propto \tau$. Since the
+test particle infalling radially from infinity, this is simply $h\propto \tau$. Since the
 step size is expressed in terms of an affine parameter, this simply means
-keeping a constant step size!
+making the step size proportional to how far we are from the singularity in terms of proper time.
+If we were to follow this prescription, then the number of steps of integration would diverge
+logarithmically as we approached the singularity.
 
 Under the same assumption of $r\propto\lambda^{2/3}$, it probably makes sense
 to extrapolate $r^{3/2}$ as a function of $\lambda$ to find when we expect
@@ -373,6 +375,28 @@ The lowest-level Runge-Kutta routine can be given a trigger telling it to
 return when r is projected to drop below 0, and then we can use the returned
 coordinates and velocities to extrapolate to find the $\lambda$, $t$, and $r$
 at which the geodesic terminates.
+
+Possibility of using specialized coordinates. Press suggests ``to make
+a pre-integration change of variables in the equations'' near a singularity.
+The form of the exact solutions for radial infall from rest at infinity suggests
+the substitution $u=r^{3/2}$, which is essentially the Keplerian scaling of times.
+Call $(t,u)$ ``Keplerian'' coordinates. Christoffel symbols:
+\begin{align*}
+\Gamma\indices{^u_t_t} &= 3/(4u)-3/(4u^(5/3))  \\
+\Gamma\indices{^t_t_u} &= -u^(1/3)/(3u^(4/3)-3u^2)  \\
+\Gamma\indices{^u_u_u} &= u^(4/3)/((-9u)+9u^(5/3)+u^(1/3)(3-3u^2))-(2u^(2/3))/((-9u)+9u^(5/3)+u^(1/3)(3-3u^2))+1/((-9u)+9u^(5/3)+u^(1/3)(3-3u^2))  \\
+\Gamma\indices{^i_u_i} &= 2/(3u)  \\
+\Gamma\indices{^j_u_j} &= 2/(3u)  \\
+\Gamma\indices{^k_u_k} &= 2/(3u)  \\
+\Gamma\indices{^u_i_i} &= (3u^(1/3))/2-(3u)/2  \\
+\Gamma\indices{^u_j_j} &= (3u^(1/3))/2-(3u)/2  \\
+\Gamma\indices{^u_k_k} &= (3u^(1/3))/2-(3u)/2  \\
+\end{align*}
+For small $u$, most of the Christoffel symbols blow up like $u^{-1}$, except for
+$\Gamma\indices{^u_t_t}$, which goes like $u^{-5/3}$. This seems a lot better than
+Schwarzschild, which goes like $r^{-3}$. Transformation of vectors is simply
+$v^u=(3/2)r^{1/2}v^r$. For a particle infalling from rest at infinity, all the Christoffel
+symbols vanish identically, so results of Runge-Kutta are exact up to rounding errors.
 
 \section{Reissner-Nordstrom black hole (charge, no spin)}
 
@@ -621,5 +645,25 @@ Clojure: Has the advantage of dual implementation. I hate java. There is runge-k
 \url{https://github.com/mobius-eng/numerics}. Doesn't support infix arithmetic, so no.
 
 
+\section{Literature}
+
+Bacchini, ``Generalized, energy-conserving numerical simulations of particles
+in general relativity. I. Time-like and null geodesics,''
+\url{https://arxiv.org/abs/1801.02378} -- assumes a static spacetime
+
+Chan, ``GRay2: A General Purpose Geodesic Integrator for Kerr Spacetimes,''
+\url{https://arxiv.org/abs/1706.07062} --
+Cartesian Kerr-Schild coordinates, describes software GRay2, which runs on GPUs;
+older version GRay at \url{https://github.com/luxsrc/gray} ; Chan on github:
+\url{https://github.com/chanchikwan}
+
+Lewis and Kwan, ``No Way Back: Maximizing survival time below the Schwarzschild event horizon,''
+\url{https://arxiv.org/abs/0705.1029} -- They say they used odepack, but nothing about what
+routine they used or how they managed the singularity. They quote errors on the order of
+$10^{-4}$, which is good enough for their purposes but would be sad for general-purpose use.
+
+http://numerical.recipes/CiP97.pdf -- ``Runge-Kutta, when we eventually learned to integrate away from --
+not into -- singularities, and to make a pre-integration change of variables in
+the equations, worked splendidly.''
 
 \end{document}
