fix bugs and breakage; passes all tests

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -393,7 +393,8 @@ Call $(t,u)$ ``Keplerian'' coordinates. Christoffel symbols:
 \end{align*}
 For small $u$, the worst behavior by any of the Christoffel symbols is
 to blow up like like $u^{-5/3}$. This seems a lot better than
-Schwarzschild, which goes like $r^{-3}$. Transformation of vectors is simply
+Schwarzschild, which goes like $r^{-3}$. For free-fall from rest at infinity, $\dot{u}$ is
+constant. Transformation of vectors is simply
 $v^u=(3/2)r^{1/2}v^r$.
 
 \section{Reissner-Nordstrom black hole (charge, no spin)}
