working version before changing API

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -544,13 +544,10 @@ numerically. May want to treat such cases as null geodesics.
 For a null geodesic with $L=0$, the solution is $r=\lambda$, $t=\lambda+\ln(1-\lambda)$
 (or any affine reparametrization).
 
-For a null geodesic with $L\ne0$, it looks from a numerical example
-like maybe $r\propto \lambda^{1/2}$, but it's
-hard to be sure about the exponent with this technique, possibly $r$ behaves
-worse than any power near $\lambda=0$, maybe like a log or something.
-A quick and sloppy analysis of $\tau(r)$ in the limit $E\rightarrow\infty$
-gives $\propto \tau^{2/5}$, i.e., the same as for $m\ne0$, since the same term in
-the integrand for $\tau{r}$ still dominates.
+For a null geodesic with $L\ne0$, a quick and sloppy analysis of
+$\tau(r)$ in the limit $E\rightarrow\infty$ gives $\propto
+\tau^{2/5}$, i.e., the same as for $m\ne0$, since the same term in the
+integrand for $\tau{r}$ still dominates. 
 
 Summary of exponents $p$ in $r\propto \lambda^p$:
 
